branding/site title

--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -522,6 +522,18 @@ body {
   height: 300px;
 }
 /*! ==========================================================================
+   $Modules
+   ========================================================================== */
+.brand {
+  /* needs to reset both p & h1 */
+
+  font-size: 50px;
+  font-weight: bold;
+  letter-spacing: -2.5px;
+  text-shadow: 0 1px 1px #f7f7f7;
+  margin: 0;
+}
+/*! ==========================================================================
    $Helper classes
    ========================================================================== */
 /* $clearfix */
