correct font colour

--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -74,7 +74,7 @@ html {
     -webkit-text-size-adjust: 100%; /* 2 */
     -ms-text-size-adjust: 100%; /* 2 */
 
-	color: #000;
+	color: #4d4d4d;
 	background: #eee url(../i/background.png);
 }
 
