--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -84,7 +84,7 @@ html {
   -ms-text-size-adjust: 100%;
   /* 2 */
 
-  color: #000;
+  color: #4d4d4d;
   background: #eeeeee url(../i/background.png);
 }
 /*
