.brand font size in rems

--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -570,7 +570,7 @@ body {
 
 .brand {
 	/* needs to reset both p & h1 */
-	font-size: 50px;
+	#rems > .font-size(50);
 	font-weight: bold;
 	letter-spacing: -2.5px;
 	text-shadow: 0 1px 1px #f7f7f7;
