--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -528,6 +528,7 @@ body {
   /* needs to reset both p & h1 */
 
   font-size: 50px;
+  font-size: 3.5714rem;
   font-weight: bold;
   letter-spacing: -2.5px;
   text-shadow: 0 1px 1px #f7f7f7;
