link brand to home page

--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -578,6 +578,14 @@ body {
 	margin: 0;
 }
 
+.brand > a:link,
+.brand > a:visited {
+	/* :link & :visited for specificity */
+	color: #4d4d4d;
+	background-color: transparent;
+	text-decoration: none;
+}
+
 
 /*! ==========================================================================
    $Helper classes
