--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -534,6 +534,14 @@ body {
   text-shadow: 0 1px 1px #f7f7f7;
   margin: 0;
 }
+.brand > a:link,
+.brand > a:visited {
+  /* :link & :visited for specificity */
+
+  color: #4d4d4d;
+  background-color: transparent;
+  text-decoration: none;
+}
 /*! ==========================================================================
    $Helper classes
    ========================================================================== */
