add brand comment

--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -524,6 +524,7 @@ body {
 /*! ==========================================================================
    $Modules
    ========================================================================== */
+/* $brand */
 .brand {
   /* needs to reset both p & h1 */
 
