--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -567,7 +567,7 @@ body {
    $Modules
    ========================================================================== */
 
-
+/* $brand */
 .brand {
 	/* needs to reset both p & h1 */
 	#rems > .font-size(50);
