small icons (with hover states)

--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -543,6 +543,57 @@ body {
   background-color: transparent;
   text-decoration: none;
 }
+/* $icons */
+.ico,
+.ico-small {
+  display: inline-block;
+  overflow: hidden !important;
+  width: 38px !important;
+  height: 38px !important;
+  background-image: url(../i/ico/small.png);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+.ico-me {
+  background-position: 0 0;
+}
+a:hover .ico-me,
+a:focus .ico-me,
+a:active .ico-me {
+  background-position: 0 -40px;
+}
+.ico-fb {
+  background-position: -40px 0;
+}
+a:hover .ico-fb,
+a:focus .ico-fb,
+a:active .ico-fb {
+  background-position: -40px -40px;
+}
+.ico-tw {
+  background-position: -80px 0;
+}
+a:hover .ico-tw,
+a:focus .ico-tw,
+a:active .ico-tw {
+  background-position: -80px -40px;
+}
+.ico-li {
+  background-position: -120px 0;
+}
+a:hover .ico-li,
+a:focus .ico-li,
+a:active .ico-li {
+  background-position: -120px -40px;
+}
+.ico-pi {
+  background-position: -160px 0;
+}
+a:hover .ico-pi,
+a:focus .ico-pi,
+a:active .ico-pi {
+  background-position: -160px -40px;
+}
 /*! ==========================================================================
    $Helper classes
    ========================================================================== */
