--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -586,6 +586,51 @@ body {
 	text-decoration: none;
 }
 
+/* $icons */
+.ico, .ico-small {
+	display: inline-block;
+	overflow: hidden !important;
+	width: 38px !important;
+	height: 38px !important;
+	background-image: url(../i/ico/small.png);
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
+.ico-me {
+	background-position: 0 0;
+	a:hover &, a:focus &, a:active & {
+		background-position: 0 -40px;
+	}
+}
+
+.ico-fb {
+	background-position: -40px 0;
+	a:hover &, a:focus &, a:active & {
+		background-position: -40px -40px;
+	}
+}
+
+.ico-tw {
+	background-position: -80px 0;
+	a:hover &, a:focus &, a:active & {
+		background-position: -80px -40px;
+	}
+}
+
+.ico-li {
+	background-position: -120px 0;
+	a:hover &, a:focus &, a:active & {
+		background-position: -120px -40px;
+	}
+}
+.ico-pi {
+	background-position: -160px 0;
+	a:hover &, a:focus &, a:active & {
+		background-position: -160px -40px;
+	}
+}
+
 
 /*! ==========================================================================
    $Helper classes
