--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -564,6 +564,27 @@ body {
 }
 
 /*! ==========================================================================
+   $Abstraction
+   ========================================================================== */
+
+/*
+.fork {
+	//see clearfix
+}
+*/
+
+.fork-left {
+	float: left;
+	padding-right: 1em;
+}
+
+.fork-right {
+	float: right;
+	padding-left: 1em;
+}
+
+
+/*! ==========================================================================
    $Modules
    ========================================================================== */
 
@@ -641,6 +662,7 @@ body
 ,.head
 ,.container
 ,.foot
+,.fork
 {
 	#fixes > .clearfix();
 }
