brand line-height to 1

--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -594,6 +594,7 @@ body {
 	#rems > .font-size(50);
 	font-weight: bold;
 	letter-spacing: -2.5px;
+	line-height: 1;
 	text-shadow: 0 1px 1px #f7f7f7;
 
 	margin: 0;
