--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -548,6 +548,7 @@ body {
   font-size: 3.5714rem;
   font-weight: bold;
   letter-spacing: -2.5px;
+  line-height: 1;
   text-shadow: 0 1px 1px #f7f7f7;
   margin: 0;
 }
