--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -653,6 +653,13 @@ body {
 	}
 }
 
+/* $menu */
+.menu {
+	/* this is to match brand */
+	line-height: 50px;
+	line-height: 3.5714rem;
+	.ico {vertical-align: bottom;}
+}
 
 /*! ==========================================================================
    $Helper classes
