--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -497,10 +497,14 @@ body {
 .head {
   /* see clearfix */
 
+  padding-top: 55px;
+  padding-top: 3.9286rem;
   border-bottom: 1px solid #a6a5a5;
   padding-bottom: 10px;
 }
 .head-in {
+  margin-top: 55px;
+  margin-top: 3.9286rem;
   display: block;
   width: 100%;
   border-top: 1px solid #a6a5a5;
@@ -570,6 +574,16 @@ body {
   /* :link & :visited for specificity */
 
   color: #4d4d4d;
+  background-color: transparent;
+  text-decoration: none;
+}
+.brand > a:focus {
+  background-color: #7e7e7e;
+  color: #fff;
+}
+.brand > a:hover,
+.brand > a:active {
+  color: #7e7e7e;
   background-color: transparent;
   text-decoration: none;
 }
