--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -694,11 +694,21 @@ body {
    ========================================================================== */
 
 /* $clearfix */
-body
+.cf
+,.clearfix
+,body
 ,.head
 ,.container
 ,.foot
 ,.fork
 {
 	#fixes > .clearfix();
+}
+
+.alignleft {
+	float: left;
+}
+
+.alignright {
+	float: left;
 }
