--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -637,7 +637,7 @@ body {
 }
 
 /* $icons */
-.ico, .ico-small {
+.ico, .ico-med {
 	display: inline-block;
 	overflow: hidden !important;
 	width: 38px !important;
