--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -681,3 +681,13 @@ body:after,
 .alignright {
   float: left;
 }
+.accessibility {
+  position: absolute !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden !important;
+  clip: rect(1px 1px 1px 1px) !important;
+  /* IE6, IE7 */
+
+  clip: rect(1px, 1px, 1px, 1px) !important;
+}
