update file name

--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -594,7 +594,7 @@ body {
   overflow: hidden !important;
   width: 38px !important;
   height: 38px !important;
-  background-image: url(../i/ico/small.png);
+  background-image: url(../i/ico/med.png);
   background-repeat: no-repeat;
   background-position: 0 0;
 }
