--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -681,6 +681,42 @@ body {
 	}
 }
 
+.ico-small {
+	display: inline-block;
+	overflow: hidden !important;
+/*	width: 38px !important;*/
+	height: 17px !important;
+	background-image: url(../i/ico/small.png);
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
+.ico-comments {
+	width: 20px !important;
+	background-position: 0 0;
+	a:hover &, a:focus &, a:active & {
+		background-position: 0 -20px;
+	}
+}
+
+.ico-likes {
+	width: 16px !important;
+	background-position: -20px 0;
+	a:hover &, a:focus &, a:active & {
+		background-position: -20px -20px;
+	}
+}
+
+.ico-reblog {
+	width: 17px !important;
+	background-position: -40px 0;
+	a:hover &, a:focus &, a:active & {
+		background-position: -40px -20px;
+	}
+}
+
+
+
 /* $menu */
 .menu {
 	/* this is to match brand */
