--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -604,6 +604,21 @@ body {
    $Modules
    ========================================================================== */
 
+/* $article & $entry */
+.article {
+	margin-left: 10px;
+}
+
+.entry-meta-head {
+	float: left;
+	width: 43px;
+	margin-right: 30px;
+}
+
+.entry-title, .entry-body, .entry-footer {
+	margin-left: 30+43px;
+}
+
 /* $brand */
 .brand {
 	/* needs to reset both p & h1 */
