add large icons

--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -730,6 +730,60 @@ body {
 	}
 }
 
+.ico-large {
+	display: inline-block;
+	overflow: hidden !important;
+/*	width: 38px !important;*/
+/*	height: 17px !important;*/
+	background-image: url(../i/ico/large.png);
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
+.ico-quote {
+	width: 44px !important;
+	height: 39px !important;
+	background-position: 0 0;
+}
+
+.ico-photo {
+	width: 44px !important;
+	height: 29px !important;
+	background-position: -50px 0;
+}
+
+.ico-chat {
+	width: 44px !important;
+	height: 33px !important;
+	background-position: -100px 0;
+}
+
+.ico-audio {
+	width: 44px !important;
+	height: 64px !important;
+	background-position: -150px 0;
+}
+
+.ico-text {
+	width: 37px !important;
+	height: 36px !important;
+	background-position: -200px 0;
+}
+
+.ico-video {
+	width: 47px !important;
+	height: 39px !important;
+	background-position: -250px 0;
+}
+
+/*
+.ico- {
+	width: 44px !important;
+	height: px !important;
+	background-position: -0px 0;
+}
+*/
+
 
 
 /* $menu */
