--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -563,13 +563,17 @@ body {
 }
 .entry-meta-head {
   float: left;
-  width: 43px;
+  width: 47px;
   margin-right: 30px;
+  text-align: center;
 }
 .entry-title,
 .entry-body,
 .entry-footer {
-  margin-left: 73px;
+  margin-left: 77px;
+}
+.entry-title {
+  margin-top: 0;
 }
 /* $brand */
 .brand {
@@ -746,6 +750,39 @@ a:active .ico-reblog {
 }
 .menu .ico {
   vertical-align: bottom;
+}
+/* $time */
+.time {
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1;
+  display: block;
+  border-top: 1px solid #a6a5a5;
+}
+.time-day,
+.time-month,
+.time-year {
+  display: block;
+}
+.time-day {
+  border-top: 1px solid #fff;
+  font-size: 29px;
+  font-size: 2.0714rem;
+}
+.time-month {
+  border-bottom: 1px solid #a6a5a5;
+  font-size: 17px;
+  font-size: 1.2143rem;
+  padding-bottom: 8px;
+  padding-bottom: 0.5714rem;
+}
+.time-year {
+  color: #bdbbbb;
+  border-top: 1px solid #fff;
+  font-size: 15px;
+  font-size: 1.0714rem;
+  padding-top: 3px;
+  padding-top: 0.2143rem;
 }
 /*! ==========================================================================
    $Helper classes
