add text-shadow to date

--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -817,11 +817,13 @@ body {
 .time-day {
 	border-top: 1px solid #fff;
 	#rems > .font-size(29);
+	text-shadow: 0 1px 1px #f7f7f7;
 }
 
 .time-month {
 	border-bottom: 1px solid #a6a5a5;
 	#rems > .font-size(17);
+	text-shadow: 0 1px 1px #f7f7f7;
 	#rems > .padding-bottom(8);
 }
 
