--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -768,11 +768,13 @@ a:active .ico-reblog {
   border-top: 1px solid #fff;
   font-size: 29px;
   font-size: 2.0714rem;
+  text-shadow: 0 1px 1px #f7f7f7;
 }
 .time-month {
   border-bottom: 1px solid #a6a5a5;
   font-size: 17px;
   font-size: 1.2143rem;
+  text-shadow: 0 1px 1px #f7f7f7;
   padding-bottom: 8px;
   padding-bottom: 0.5714rem;
 }
