--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -838,6 +838,7 @@ body {
 	line-height: 1;
 	display: block;
 	border-top: 1px solid #a6a5a5;
+	margin-top: 5px;
 }
 
 .time-day,
@@ -876,6 +877,7 @@ body {
 ,body
 ,.head
 ,.container
+,.hentry
 ,.foot
 ,.fork
 {
