--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -565,14 +565,14 @@ body {
 
 .content {
 	float: left;
-	width: 542px;
+	width: 542+55px;
 	padding-right: 49px;
 	border-right: 1px solid #a6a5a5;
 }
 
 .sidebar {
 	float: right;
-	width: 298px;
+	width: 298-55px;
 	padding-left: 49px;
 	border-left: 1px solid #fff;
 }
