--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -671,6 +671,12 @@ body {
 	:last-child { margin-bottom: 0; }
 }
 
+.article-photoset-set {
+	background-color: #fff;
+	border: 5px solid #fff;
+	.box-shadow(0 1px 3px rgba(56,56,56,.75));	
+}
+
 /* $brand */
 .brand {
 	/* needs to reset both p & h1 */
