--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -677,6 +677,21 @@ body {
 	.box-shadow(0 1px 3px rgba(56,56,56,.75));	
 }
 
+.article-chat-transcript {
+	list-style: none;
+	padding-left: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.article-chat-transcript > li {
+	padding: 1em;
+}
+
+.article-chat-transcript > .alt {
+	background-color: #e0e0e0;
+}
+
 /* $brand */
 .brand {
 	/* needs to reset both p & h1 */
