--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -893,6 +893,33 @@ body {
 	line-height: 3.5714rem;
 }
 
+/* $player */
+.player {
+	/* see clearfix */
+	font-weight: bold;
+	text-shadow: 0 1px 1px #f7f7f7;
+	
+	#rems > .padding(@baseFontSize);
+	background-color: rgba(157,151,153,0.22);
+	border: 1px solid #a6a5a5;
+	.border-radius(5px);
+	
+	@shadow: inset 0 1px 1px #fff;
+	.box-shadow(@shadow);
+}
+
+.player-artist{
+	margin-bottom: 0;
+}
+.player-track {
+	margin-top: 0;
+}
+
+.player-album {
+	font-weight: normal;
+	font-style: italic;
+}
+
 /* $time */
 .time {
 	font-weight: bold;
@@ -943,6 +970,7 @@ body {
 ,.foot
 ,.fork
 ,.media
+,.player
 {
 	#fixes > .clearfix();
 }
