--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -829,6 +829,14 @@ body {
 	}
 }
 
+.ico-source {
+	width: 26px !important;
+	background-position: -60px 0;
+	a:hover &, a:focus &, a:active & {
+		background-position: -60px -20px;
+	}
+}
+
 .ico-large {
 	vertical-align: bottom;
 	display: inline-block;
