--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -111,17 +111,19 @@ body {
    ========================================================================== */
 a:link,
 a:visited {
-  color: #000;
+  color: #272727;
+  color: #4D4D4D;
   background-color: transparent;
-  text-decoration: none;
-  font-weight: bold;
+  text-decoration: underline;
 }
 /*
  * 1. Addresses outline displayed oddly in Chrome
  */
-a:focus {
-  background-color: #000;
-  color: #fff;
+a:focus,
+a:hover,
+a:active {
+  background-color: rgba(0, 0, 0, 0.2);
+  color: #4D4D4D;
   text-decoration: none;
   outline: thin dotted /* 1. */;
 }
@@ -132,9 +134,6 @@ a:focus {
 a:hover,
 a:active {
   outline: 0 /* 1 */;
-  color: #7e7e7e;
-  background-color: transparent;
-  text-decoration: underline;
 }
 /* Typography
    ========================================================================== */
