--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -108,19 +108,21 @@ body {
    ========================================================================== */
 
 a:link, a:visited {
-	color: #000;
+	color: (#000 + #4D4D4D) / 2;
+	color: #4D4D4D;
 	background-color: transparent;
-	text-decoration: none;
-	font-weight: bold;
+	text-decoration: underline;
 }
 
 /*
  * 1. Addresses outline displayed oddly in Chrome
  */
 
-a:focus {
-	background-color: #000;
-	color: #fff;
+a:focus,
+a:hover,
+a:active {
+	background-color: rgba(0,0,0,.2);
+	color: #4D4D4D;
 	text-decoration: none;
     outline: thin dotted /* 1. */;
 }
@@ -133,9 +135,6 @@ a:focus {
 a:hover,
 a:active {
     outline: 0 /* 1 */;
-	color: #7e7e7e;
-	background-color: transparent;
-	text-decoration: underline;
 }
 
 
