link styling on menu

--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -108,7 +108,6 @@ body {
    ========================================================================== */
 
 a:link, a:visited {
-	color: (#000 + #4D4D4D) / 2;
 	color: #4D4D4D;
 	background-color: transparent;
 	text-decoration: underline;
@@ -898,6 +897,10 @@ body {
 	/* this is to match brand */
 	line-height: 50px;
 	line-height: 3.5714rem;
+	
+	a:hover,a:focus,a:active {
+		background-color: transparent;
+	}
 }
 
 /* $player */
