--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -646,6 +646,7 @@ body {
 .article-photo-caption :last-child {
   margin-bottom: 0;
 }
+.article-video-player,
 .article-photoset-set {
   background-color: #fff;
   border: 5px solid #fff;
@@ -920,6 +921,91 @@ a:active .ico-source {
   font-size: 1.0714rem;
   padding-top: 3px;
   padding-top: 0.2143rem;
+}
+.widget-search {
+  font-weight: bold;
+  text-shadow: 0 1px 1px #f7f7f7;
+  padding: 7px   ;
+  padding: 0.5rem   ;
+  background-color: rgba(157, 151, 153, 0.22);
+  border: 1px solid #a6a5a5;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  -webkit-box-shadow: inset 0 1px 1px #ffffff;
+  -moz-box-shadow: inset 0 1px 1px #ffffff;
+  box-shadow: inset 0 1px 1px #ffffff;
+}
+.widget-search .text {
+  width: 190px;
+  min-height: 25px;
+  line-height: 25px;
+  border: 0;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  background-color: transparent;
+}
+.widget-search .submit {
+  vertical-align: bottom;
+}
+.widget-title {
+  margin-top: 40px;
+  margin-top: 2.8571rem;
+  padding-bottom: 11px;
+  padding-bottom: 0.7857rem;
+  border-bottom: 2px groove #eee;
+}
+.widget-list {
+  font-size: 14px;
+  font-size: 1rem;
+  list-style: none;
+  padding-left: 0;
+}
+.widget-list > li {
+  background-image: url(../i/widget/li-background.png);
+  background-repeat: no-repeat;
+  background-position: 0 5px;
+  padding-left: 35px;
+  margin-bottom: 20px;
+  margin-bottom: 1.4286rem;
+}
+.widget-time {
+  font-size: 11px;
+  font-size: 0.7857rem;
+  display: block;
+}
+.widget-pi li {
+  padding-left: 0;
+  background-image: none;
+  float: left;
+}
+.widget-pi li.even {
+  float: right;
+}
+.widget-pi li.odd {
+  clear: both;
+}
+.widget-pi li p {
+  display: none;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.widget-pi li p:first-child {
+  display: block;
+}
+.widget-pi li p img {
+  width: 100px;
+  border: 5px solid #fff;
+  -webkit-box-shadow: 0 1px 3px rgba(56, 56, 56, 0.75);
+  -moz-box-shadow: 0 1px 3px rgba(56, 56, 56, 0.75);
+  box-shadow: 0 1px 3px rgba(56, 56, 56, 0.75);
+}
+.widget-pi li a {
+  background-color: transparent;
 }
 /*! ==========================================================================
    $Helper classes
