--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -693,6 +693,7 @@ body {
 	:last-child { margin-bottom: 0; }
 }
 
+.article-video-player,
 .article-photoset-set {
 	background-color: #fff;
 	border: 5px solid #fff;
@@ -964,6 +965,93 @@ body {
 	border-top: 1px solid #fff;
 	#rems > .font-size(15);
 	#rems > .padding-top(3);
+}
+
+
+.widget-search {
+	font-weight: bold;
+	text-shadow: 0 1px 1px #f7f7f7;
+	
+	#rems > .padding(@baseFontSize/2);
+	background-color: rgba(157,151,153,0.22);
+	border: 1px solid #a6a5a5;
+	.border-radius(5px);
+	
+	@shadow: inset 0 1px 1px #fff;
+	.box-shadow(@shadow);
+}
+
+.widget-search .text {
+	width: 190px;
+	min-height: 25px;
+	line-height: 25px;
+	border: 0;
+	.box-shadow(none);
+	background-color: transparent;
+}
+
+.widget-search .submit {
+	vertical-align: bottom;
+}
+
+.widget-title {
+	#rems > .margin-top(40);
+	#rems > .padding-bottom(11);
+	border-bottom: 2px groove #eee;
+}
+
+.widget-list {
+	#rems > .font-size(14);
+	list-style: none;
+	padding-left: 0;
+}
+
+.widget-list > li {
+	background-image: url(../i/widget/li-background.png);
+	background-repeat: no-repeat;
+	background-position: 0 5px;
+	padding-left: 35px;
+	#rems > .margin-bottom(20);
+}
+
+.widget-time {
+	#rems > .font-size(11);
+	display: block;
+}
+
+.widget-pi li {
+	padding-left: 0;
+	background-image: none;
+	float: left;
+}
+
+.widget-pi li.even {
+	float: right;
+}
+
+.widget-pi li.odd {
+	clear: both;
+}
+
+.widget-pi li p {
+	display: none;
+	margin-top: 0;
+	margin-bottom: 0;
+	
+}
+
+.widget-pi li p:first-child {
+	display: block;
+}
+
+.widget-pi li p img {
+	width: 100px;
+	border: 5px solid #fff;
+	.box-shadow(0 1px 3px rgba(56,56,56,.75));
+}
+
+.widget-pi li a {
+	background-color: transparent;
 }
 
 /*! ==========================================================================
