--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -555,8 +555,6 @@ body {
 
 .foot {
 	/* see clearfix */
-	border-top: 1px solid #fff;
-	border-bottom: 1px solid #a6a5a5;
 }
 
 .content {
@@ -722,6 +720,7 @@ body {
 	color: #bbb;
 	#rems > .font-size(17);
 	font-weight: bold;
+	text-shadow: 0 1px 1px #f7f7f7;
 	
 	#rems > .padding-top(14);
 	#rems > .padding-bottom(14);
