vertical align ico-med to middle

--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -781,7 +781,7 @@ body {
   background-image: url(../i/ico/med.png);
   background-repeat: no-repeat;
   background-position: 0 0;
-  vertical-align: bottom;
+  vertical-align: middle;
 }
 .ico-me {
   background-position: 0 0;
