--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -837,7 +837,7 @@ body {
 	background-image: url(../i/ico/med.png);
 	background-repeat: no-repeat;
 	background-position: 0 0;
-	vertical-align: bottom;
+	vertical-align: middle;
 }
 
 .ico-me {
