equal height columns using CSS, ta.

--- a/assets/c/style.css
+++ b/assets/c/style.css
@@ -530,6 +530,14 @@ body {
   padding-left: 49px;
   border-left: 1px solid #fff;
 }
+.container {
+  overflow: hidden;
+}
+.content,
+.sidebar {
+  padding-bottom: 32760px;
+  margin-bottom: -32760px;
+}
 .theme-by {
   color: #bbb;
   font-size: 13px;
