--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -571,6 +571,15 @@ body {
 	border-left: 1px solid #fff;
 }
 
+.container {
+	overflow: hidden;
+}
+.content,.sidebar {
+	padding-bottom: 32760px;
+	margin-bottom: -32760px;
+}
+
+
 .theme-by {
 	color: #bbb;
 	#rems > .font-size(13);
