--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -751,12 +751,32 @@ body {
 	list-style: none;
 	padding-left: 0;
 	border-top: 1px dashed #a6a5a5;
+	position: relative;
+	&:before {
+		border-bottom: 1px dashed #fff;
+		content: ' ';
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+	}
 }
 
 .entry-notes li {
 	padding-top: 1em;
 	padding-bottom: 1em;
-	border-bottom: 1px dashed #a6a5a5;
+	border-bottom: 1px dashed #fff;
+	position: relative;
+	&:after {
+		border-bottom: 1px dashed #a6a5a5;
+		content: ' ';
+		display: block;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
 }
 
 .entry-notes a {
